Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16467

MariaDB crashes because of "long semaphore wait"after migrating from 10.1 to 10.3

    XMLWordPrintable

Details

    Description

      We have a Windows server that has been running MariaDB 10.1 successfully for over a year. The server remains mostly idle for long times with some read access, but occasionally there are transactions that add data (about 500k rows per commit). There can be up to 10 such transactions (one per database) at the same time and during those times the server is under quite some load (the code processing the data resides on the same server as the database).

      When trying to use MariaDB 10.3, during those load times the database crashes and logs "[FATAL] InnoDB: Semaphore wait has lasted > 600 seconds. We intentionally crash the server because it appears to be hung."

      I figure it could be related to MariaDB switching from XtraDB to InnoDB and on the mailing list it was suggested to file a bug.

      I'm attaching the error log. I cannot attach a minidump as-is because upon inspection it contained sensitive data that I'm not allowed to disclose. If absolutely neccessary, I can try and reproduce the problem with random test data, but this might take a few days.

      The mailing list entry mentioned above can be found here: https://lists.launchpad.net/maria-discuss/msg05139.html

      Regards,
      Tom.

      Attachments

        1. error_mysqld.log
          635 kB
        2. gdb_core.180561.txt
          5 kB
        3. gdb_core.64996.txt
          39 kB
        4. gdb_short.txt
          9.18 MB
        5. gdb.180561.txt.gz
          519 kB
        6. mariadb_clean.err
          1.17 MB
        7. my.ini
          1 kB
        8. uniqstack.txt
          17 kB

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              tdcf Tom Deory
              Votes:
              2 Vote for this issue
              Watchers:
              14 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.