MDEV-16467 - MariaDB crashes because of "long semaphore wait"after migrating from 10.1 to 10.3

This patch fixes 10.2 issue reported in MDEV-16467 by partial backport of
c2118a0. Specifically "Remove not needed LOCK_thread_count from
thd_get_error_context_description()".